블로그 리뉴얼: Minimal Mistakes 테마 + 퀀트 포트폴리오 포스트 추가

--- a/_config.yml
+++ b/_config.yml
@@ -1,19 +1,43 @@
-title: 민혁의 개발 블로그
-description: 프로젝트와 개발 기록을 정리합니다
-author: 윤민혁
+title: Ha Rim Jung
+description: Quantitative Researcher & Financial Engineer | 퀀트 리서치 · 금융공학 · 데이터 분석
+author: Ha Rim Jung
 
 # GitHub Pages 설정
 baseurl: ""
 url: "https://gkfla2020-bit.github.io"
 
-# 테마 설정
-remote_theme: pages-themes/minimal@v0.2.0
+# 테마 설정 - Minimal Mistakes (세련된 테마)
+remote_theme: mmistakes/minimal-mistakes@4.24.0
 plugins:
   - jekyll-remote-theme
+  - jekyll-feed
+  - jekyll-seo-tag
+  - jekyll-sitemap
+  - jekyll-paginate
 
 # 마크다운 설정
 markdown: kramdown
 highlighter: rouge
+
+# 사이트 설정
+locale: "ko-KR"
+logo: 
+masthead_title: "Ha Rim Jung"
+subtitle: "Quant Research & Financial Engineering"
+
+# 저자 정보
+author:
+  name: "Ha Rim Jung"
+  avatar: "https://avatars.githubusercontent.com/u/gkfla2020-bit"
+  bio: "Quantitative Researcher & Financial Engineer"
+  location: "Seoul, Korea"
+  links:
+    - label: "GitHub"
+      icon: "fab fa-fw fa-github"
+      url: "https://github.com/gkfla2020-bit"
+    - label: "Email"
+      icon: "fas fa-fw fa-envelope"
+      url: "mailto:gkfla2020@gmail.com"
 
 # 기본값
 defaults:
@@ -21,4 +45,48 @@ defaults:
       path: ""
       type: "posts"
     values:
-      layout: "default"
+      layout: "single"
+      author_profile: true
+      read_time: true
+      comments: false
+      share: true
+      related: true
+      toc: true
+      toc_sticky: true
+  - scope:
+      path: ""
+    values:
+      layout: "single"
+      author_profile: true
+
+# 카테고리
+category_archive:
+  type: liquid
+  path: /categories/
+
+# 태그
+tag_archive:
+  type: liquid
+  path: /tags/
+
+# 분석
+analytics:
+  provider: false
+
+# 페이지네이션
+paginate: 10
+paginate_path: /page:num/
+
+# 검색
+search: true
+search_full_content: true
+
+# 스킨 (다크/라이트)
+minimal_mistakes_skin: "dark"
+
+# 푸터
+footer:
+  links:
+    - label: "GitHub"
+      icon: "fab fa-fw fa-github"
+      url: "https://github.com/gkfla2020-bit"
