Academic portfolio redesign: CV, Research, Projects pages

--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -1,9 +1,11 @@
 main:
   - title: "Home"
     url: /
-  - title: "Portfolio"
-    url: /portfolio/
-  - title: "About"
-    url: /about/
+  - title: "CV"
+    url: /cv/
+  - title: "Research"
+    url: /research/
+  - title: "Projects"
+    url: /projects/
   - title: "GitHub"
     url: https://github.com/gkfla2020-bit
