--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -7,5 +7,7 @@ main:
     url: /research/
   - title: "Projects"
     url: /projects/
+  - title: "Reading"
+    url: /reading/
   - title: "GitHub"
     url: https://github.com/gkfla2020-bit
