Fix: Minimal Mistakes 테마로 변경, 깨진 커스텀 파일 삭제

--- a/_config.yml
+++ b/_config.yml
@@ -1,38 +1,39 @@
 title: Ha Rim Jung
-description: Quantitative Researcher | Financial Engineering | Sogang University
-author: Ha Rim Jung
-
-# GitHub Pages
-baseurl: ""
+name: Ha Rim Jung
+description: Quantitative Researcher | Sogang University
 url: "https://gkfla2020-bit.github.io"
+baseurl: ""
 
-# Academic Pages 테마 (학술용)
-remote_theme: academicpages/academicpages.github.io
+# 테마
+remote_theme: "mmistakes/minimal-mistakes@4.24.0"
+minimal_mistakes_skin: "dark"
+
 plugins:
   - jekyll-remote-theme
   - jekyll-feed
+  - jekyll-seo-tag
   - jekyll-sitemap
   - jekyll-paginate
 
+# 저자 정보
+author:
+  name: "Ha Rim Jung"
+  bio: "M.S./Ph.D. Student in Computer Science"
+  location: "Seoul, Korea"
+  links:
+    - label: "GitHub"
+      icon: "fab fa-fw fa-github"
+      url: "https://github.com/gkfla2020-bit"
+    - label: "Email"
+      icon: "fas fa-fw fa-envelope"
+      url: "mailto:gkfla2020@gmail.com"
+
+# 기본 설정
+locale: "en-US"
 markdown: kramdown
 highlighter: rouge
 
-locale: "en-US"
-
-# Author
-author:
-  name: "Ha Rim Jung"
-  avatar: "/images/profile.jpg"
-  bio: "M.S./Ph.D. Student in Computer Science"
-  location: "Seoul, Korea"
-  employer: "Sogang University"
-  googlescholar: 
-  orcid: 
-  linkedin: 
-  github: "gkfla2020-bit"
-  email: "gkfla2020@gmail.com"
-
-# Defaults
+# 기본값
 defaults:
   - scope:
       path: ""
@@ -41,7 +42,7 @@ defaults:
       layout: "single"
       author_profile: true
       read_time: true
-      share: true
+      share: false
   - scope:
       path: ""
       type: "pages"
@@ -52,6 +53,12 @@ defaults:
 include:
   - _pages
 
-# Analytics
-analytics:
-  provider: false
+# 검색
+search: false
+
+# 푸터
+footer:
+  links:
+    - label: "GitHub"
+      icon: "fab fa-fw fa-github"
+      url: "https://github.com/gkfla2020-bit"
