Fix: jekyll-theme-minimal로 변경 (GitHub Pages 호환)

--- a/_config.yml
+++ b/_config.yml
@@ -1,35 +1,15 @@
 title: Ha Rim Jung
-name: Ha Rim Jung
 description: Quantitative Researcher | Sogang University
 url: "https://gkfla2020-bit.github.io"
 baseurl: ""
 
-# 테마
-remote_theme: "mmistakes/minimal-mistakes@4.24.0"
-minimal_mistakes_skin: "dark"
-
-plugins:
-  - jekyll-remote-theme
-  - jekyll-feed
-  - jekyll-seo-tag
-  - jekyll-sitemap
-  - jekyll-paginate
+# GitHub Pages 기본 테마
+theme: jekyll-theme-minimal
 
 # 저자 정보
-author:
-  name: "Ha Rim Jung"
-  bio: "M.S./Ph.D. Student in Computer Science"
-  location: "Seoul, Korea"
-  links:
-    - label: "GitHub"
-      icon: "fab fa-fw fa-github"
-      url: "https://github.com/gkfla2020-bit"
-    - label: "Email"
-      icon: "fas fa-fw fa-envelope"
-      url: "mailto:gkfla2020@gmail.com"
+author: Ha Rim Jung
 
-# 기본 설정
-locale: "en-US"
+# 마크다운
 markdown: kramdown
 highlighter: rouge
 
@@ -37,28 +17,14 @@ highlighter: rouge
 defaults:
   - scope:
       path: ""
-      type: "posts"
     values:
-      layout: "single"
-      author_profile: true
-      read_time: true
-      share: false
-  - scope:
-      path: ""
-      type: "pages"
-    values:
-      layout: "single"
-      author_profile: true
+      layout: "default"
 
 include:
   - _pages
 
-# 검색
-search: false
-
-# 푸터
-footer:
-  links:
-    - label: "GitHub"
-      icon: "fab fa-fw fa-github"
-      url: "https://github.com/gkfla2020-bit"
+# 플러그인
+plugins:
+  - jekyll-feed
+  - jekyll-seo-tag
+  - jekyll-sitemap
