Complete blog redesign: dark theme, animations, modern layout

--- a/_config.yml
+++ b/_config.yml
@@ -1,29 +1,36 @@
+# Site Settings
 title: Ha Rim Jung
 description: Quantitative Researcher | Sogang University
 url: "https://gkfla2020-bit.github.io"
 baseurl: ""
 
-# GitHub Pages 기본 테마
-theme: jekyll-theme-minimal
+# Author
+author:
+  name: Ha Rim Jung
+  email: gkfla2020@gmail.com
+  github: gkfla2020-bit
 
-# 저자 정보
-author: Ha Rim Jung
-
-# 마크다운
+# Build Settings
 markdown: kramdown
 highlighter: rouge
 
-# 기본값
+# Defaults
 defaults:
   - scope:
       path: ""
+      type: "posts"
     values:
-      layout: "default"
+      layout: "post"
+  - scope:
+      path: ""
+      type: "pages"
+    values:
+      layout: "page"
 
 include:
   - _pages
 
-# 플러그인
+# Plugins
 plugins:
   - jekyll-feed
   - jekyll-seo-tag
