Site structure audit R1-R5: unified sidebar layout, breadcrumbs, category system, mobile nav toggle

--- a/_config.yml
+++ b/_config.yml
@@ -22,6 +22,11 @@ defaults:
       type: "pages"
     values:
       layout: "page"
+  - scope:
+      path: ""
+      type: "posts"
+    values:
+      layout: "post"
 
 include:
   - _pages
